# usfda-compost-ca-on-personal-for-changes

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: code_walkthrough.md  reproducibility_guide.md  scaling_guide.md  validation_methodology.md
scripts/: setup_env.sh  sync_s3_data.sh
src/animal-detect/: config.py
src/animal-detect/utils/: geo_utils.py  io_utils.py  s3_utils.py
tests/: conftest.py
